// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Internal|ProposalStep.proposals connection fetches published proposals associated to a SelectionStep and a category "Aménagement" with a cursor 1`] = `
Object {
  "node": Object {
    "proposals": Object {
      "edges": Array [
        Object {
          "cursor": "YToyOntpOjA7aToxNDg1OTAzNzgwMDAwO2k6MTtzOjk6InByb3Bvc2FsMiI7fQ==",
          "node": Object {
            "category": Object {
              "id": "pCategory1",
              "name": "Aménagement",
            },
            "comments": Object {
              "totalCount": 0,
            },
            "createdAt": "2017-02-01 00:03:00",
            "district": Object {
              "id": "district2",
              "name": "Nord Saint-Martin",
            },
            "id": "UHJvcG9zYWw6cHJvcG9zYWwy",
            "published": true,
            "publishedAt": "2017-02-01 00:03:00",
            "status": Object {
              "id": "status5",
              "name": "Vote gagné",
            },
          },
        },
      ],
      "pageInfo": Object {
        "endCursor": "YToyOntpOjA7aToxNDg1OTAzNzgwMDAwO2k6MTtzOjk6InByb3Bvc2FsMiI7fQ==",
        "hasNextPage": false,
      },
      "totalCount": 1,
    },
  },
}
`;

exports[`Internal|ProposalStep.proposals connection fetches published proposals associated to a SelectionStep and a district "Beauregard" with a cursor 1`] = `
Object {
  "node": Object {
    "proposals": Object {
      "edges": Array [
        Object {
          "cursor": "YToyOntpOjA7aToxNDg1OTAzNjAwMDAwO2k6MTtzOjk6InByb3Bvc2FsMSI7fQ==",
          "node": Object {
            "category": Object {
              "id": "pCategory2",
              "name": "Politique",
            },
            "comments": Object {
              "totalCount": 19,
            },
            "createdAt": "2017-02-01 09:08:00",
            "district": Object {
              "id": "district1",
              "name": "Beauregard",
            },
            "id": "UHJvcG9zYWw6cHJvcG9zYWwx",
            "published": true,
            "publishedAt": "2017-02-01 00:00:00",
            "status": Object {
              "id": "status4",
              "name": "Soumis au vote",
            },
          },
        },
      ],
      "pageInfo": Object {
        "endCursor": "YToyOntpOjA7aToxNDg1OTAzNjAwMDAwO2k6MTtzOjk6InByb3Bvc2FsMSI7fQ==",
        "hasNextPage": false,
      },
      "totalCount": 1,
    },
  },
}
`;

exports[`Internal|ProposalStep.proposals connection fetches published proposals associated to a SelectionStep and a status "Soumis au vote" with a cursor 1`] = `
Object {
  "node": Object {
    "proposals": Object {
      "edges": Array [
        Object {
          "cursor": "YToyOntpOjA7aToxNDg1OTAzNjAwMDAwO2k6MTtzOjk6InByb3Bvc2FsMSI7fQ==",
          "node": Object {
            "category": Object {
              "id": "pCategory2",
              "name": "Politique",
            },
            "comments": Object {
              "totalCount": 19,
            },
            "createdAt": "2017-02-01 09:08:00",
            "district": Object {
              "id": "district1",
              "name": "Beauregard",
            },
            "id": "UHJvcG9zYWw6cHJvcG9zYWwx",
            "published": true,
            "publishedAt": "2017-02-01 00:00:00",
            "status": Object {
              "id": "status4",
              "name": "Soumis au vote",
            },
          },
        },
      ],
      "pageInfo": Object {
        "endCursor": "YToyOntpOjA7aToxNDg1OTAzNjAwMDAwO2k6MTtzOjk6InByb3Bvc2FsMSI7fQ==",
        "hasNextPage": false,
      },
      "totalCount": 1,
    },
  },
}
`;

exports[`Internal|ProposalStep.proposals connection fetches published proposals associated to a SelectionStep with a cursor 1`] = `
Object {
  "node": Object {
    "proposals": Object {
      "edges": Array [
        Object {
          "cursor": "YToyOntpOjA7aToxNDg1OTAzODQwMDAwO2k6MTtzOjk6InByb3Bvc2FsMyI7fQ==",
          "node": Object {
            "category": Object {
              "id": "pCategory2",
              "name": "Politique",
            },
            "comments": Object {
              "totalCount": 0,
            },
            "createdAt": "2017-02-01 00:04:00",
            "district": Object {
              "id": "district4",
              "name": "Beaulieu",
            },
            "id": "UHJvcG9zYWw6cHJvcG9zYWwz",
            "published": true,
            "publishedAt": "2017-02-01 00:04:00",
            "status": null,
          },
        },
        Object {
          "cursor": "YToyOntpOjA7aToxNDg1OTAzNzgwMDAwO2k6MTtzOjk6InByb3Bvc2FsMiI7fQ==",
          "node": Object {
            "category": Object {
              "id": "pCategory1",
              "name": "Aménagement",
            },
            "comments": Object {
              "totalCount": 0,
            },
            "createdAt": "2017-02-01 00:03:00",
            "district": Object {
              "id": "district2",
              "name": "Nord Saint-Martin",
            },
            "id": "UHJvcG9zYWw6cHJvcG9zYWwy",
            "published": true,
            "publishedAt": "2017-02-01 00:03:00",
            "status": Object {
              "id": "status5",
              "name": "Vote gagné",
            },
          },
        },
        Object {
          "cursor": "YToyOntpOjA7aToxNDg1OTAzNjAwMDAwO2k6MTtzOjk6InByb3Bvc2FsMSI7fQ==",
          "node": Object {
            "category": Object {
              "id": "pCategory2",
              "name": "Politique",
            },
            "comments": Object {
              "totalCount": 19,
            },
            "createdAt": "2017-02-01 09:08:00",
            "district": Object {
              "id": "district1",
              "name": "Beauregard",
            },
            "id": "UHJvcG9zYWw6cHJvcG9zYWwx",
            "published": true,
            "publishedAt": "2017-02-01 00:00:00",
            "status": Object {
              "id": "status4",
              "name": "Soumis au vote",
            },
          },
        },
      ],
      "pageInfo": Object {
        "endCursor": "YToyOntpOjA7aToxNDg1OTAzNjAwMDAwO2k6MTtzOjk6InByb3Bvc2FsMSI7fQ==",
        "hasNextPage": false,
      },
      "totalCount": 3,
    },
  },
}
`;

exports[`Internal|ProposalStep.proposals connection fetches published proposals associated to a collect step and a status "En cours" with a cursor 1`] = `
Object {
  "node": Object {
    "proposals": Object {
      "edges": Array [],
      "pageInfo": Object {
        "endCursor": null,
        "hasNextPage": false,
      },
      "totalCount": 0,
    },
  },
}
`;

exports[`Internal|ProposalStep.proposals connection fetches published proposals associated to a collect step with a cursor 1`] = `
Object {
  "node": Object {
    "proposals": Object {
      "edges": Array [
        Object {
          "cursor": "YToyOntpOjA7aToxNDg1OTA1MTYwMDAwO2k6MTtzOjEwOiJwcm9wb3NhbDI2Ijt9",
          "node": Object {
            "category": null,
            "comments": Object {
              "totalCount": 0,
            },
            "createdAt": "2017-02-01 00:26:00",
            "district": null,
            "id": "UHJvcG9zYWw6cHJvcG9zYWwyNg==",
            "published": true,
            "publishedAt": "2017-02-01 00:26:00",
            "status": null,
          },
        },
        Object {
          "cursor": "YToyOntpOjA7aToxNDg1OTAzNzcwMDAwO2k6MTtzOjEwOiJwcm9wb3NhbDI1Ijt9",
          "node": Object {
            "category": null,
            "comments": Object {
              "totalCount": 0,
            },
            "createdAt": "2017-02-01 00:02:50",
            "district": null,
            "id": "UHJvcG9zYWw6cHJvcG9zYWwyNQ==",
            "published": true,
            "publishedAt": "2017-02-01 00:02:50",
            "status": null,
          },
        },
      ],
      "pageInfo": Object {
        "endCursor": "YToyOntpOjA7aToxNDg1OTAzNzcwMDAwO2k6MTtzOjEwOiJwcm9wb3NhbDI1Ijt9",
        "hasNextPage": true,
      },
      "totalCount": 3,
    },
  },
}
`;

exports[`Internal|ProposalStep.proposals connection fetches published proposals associated to a collect step with a cursor ordered by comments count ASC 1`] = `
Object {
  "node": Object {
    "proposals": Object {
      "edges": Array [
        Object {
          "cursor": "YTozOntpOjA7aTowO2k6MTtpOjE0ODU5MDUxNjAwMDA7aToyO3M6MTA6InByb3Bvc2FsMjYiO30=",
          "node": Object {
            "category": null,
            "comments": Object {
              "totalCount": 0,
            },
            "createdAt": "2017-02-01 00:26:00",
            "district": null,
            "id": "UHJvcG9zYWw6cHJvcG9zYWwyNg==",
            "published": true,
            "publishedAt": "2017-02-01 00:26:00",
            "status": null,
          },
        },
        Object {
          "cursor": "YTozOntpOjA7aTowO2k6MTtpOjE0ODU5MDM3NzAwMDA7aToyO3M6MTA6InByb3Bvc2FsMjUiO30=",
          "node": Object {
            "category": null,
            "comments": Object {
              "totalCount": 0,
            },
            "createdAt": "2017-02-01 00:02:50",
            "district": null,
            "id": "UHJvcG9zYWw6cHJvcG9zYWwyNQ==",
            "published": true,
            "publishedAt": "2017-02-01 00:02:50",
            "status": null,
          },
        },
        Object {
          "cursor": "YTozOntpOjA7aTowO2k6MTtpOjE0ODU5MDM3NjAwMDA7aToyO3M6MTA6InByb3Bvc2FsMjQiO30=",
          "node": Object {
            "category": null,
            "comments": Object {
              "totalCount": 0,
            },
            "createdAt": "2017-02-01 00:02:40",
            "district": null,
            "id": "UHJvcG9zYWw6cHJvcG9zYWwyNA==",
            "published": true,
            "publishedAt": "2017-02-01 00:02:40",
            "status": null,
          },
        },
      ],
      "pageInfo": Object {
        "endCursor": "YTozOntpOjA7aTowO2k6MTtpOjE0ODU5MDM3NjAwMDA7aToyO3M6MTA6InByb3Bvc2FsMjQiO30=",
        "hasNextPage": false,
      },
      "totalCount": 3,
    },
  },
}
`;

exports[`Internal|ProposalStep.proposals connection fetches published proposals associated to a collect step with a cursor ordered by comments count DESC 1`] = `
Object {
  "node": Object {
    "proposals": Object {
      "edges": Array [
        Object {
          "cursor": "YTozOntpOjA7aToyMDtpOjE7aToxNDg1OTM2NDgwMDAwO2k6MjtzOjk6InByb3Bvc2FsMSI7fQ==",
          "node": Object {
            "category": Object {
              "id": "pCategory2",
              "name": "Politique",
            },
            "comments": Object {
              "totalCount": 19,
            },
            "createdAt": "2017-02-01 09:08:00",
            "district": Object {
              "id": "district1",
              "name": "Beauregard",
            },
            "id": "UHJvcG9zYWw6cHJvcG9zYWwx",
            "published": true,
            "publishedAt": "2017-02-01 00:00:00",
            "status": Object {
              "id": "status4",
              "name": "Soumis au vote",
            },
          },
        },
        Object {
          "cursor": "YTozOntpOjA7aTowO2k6MTtpOjE0ODU5MDM4NDAwMDA7aToyO3M6OToicHJvcG9zYWwzIjt9",
          "node": Object {
            "category": Object {
              "id": "pCategory2",
              "name": "Politique",
            },
            "comments": Object {
              "totalCount": 0,
            },
            "createdAt": "2017-02-01 00:04:00",
            "district": Object {
              "id": "district4",
              "name": "Beaulieu",
            },
            "id": "UHJvcG9zYWw6cHJvcG9zYWwz",
            "published": true,
            "publishedAt": "2017-02-01 00:04:00",
            "status": null,
          },
        },
        Object {
          "cursor": "YTozOntpOjA7aTowO2k6MTtpOjE0ODU5MDM3ODAwMDA7aToyO3M6OToicHJvcG9zYWwyIjt9",
          "node": Object {
            "category": Object {
              "id": "pCategory1",
              "name": "Aménagement",
            },
            "comments": Object {
              "totalCount": 0,
            },
            "createdAt": "2017-02-01 00:03:00",
            "district": Object {
              "id": "district2",
              "name": "Nord Saint-Martin",
            },
            "id": "UHJvcG9zYWw6cHJvcG9zYWwy",
            "published": true,
            "publishedAt": "2017-02-01 00:03:00",
            "status": Object {
              "id": "status5",
              "name": "Vote gagné",
            },
          },
        },
      ],
      "pageInfo": Object {
        "endCursor": "YTozOntpOjA7aTowO2k6MTtpOjE0ODU5MDM3ODAwMDA7aToyO3M6OToicHJvcG9zYWwyIjt9",
        "hasNextPage": false,
      },
      "totalCount": 3,
    },
  },
}
`;

exports[`Internal|ProposalStep.proposals connection fetches published proposals associated to a collect step with a cursor ordered by old published 1`] = `
Object {
  "node": Object {
    "proposals": Object {
      "edges": Array [
        Object {
          "cursor": "YToyOntpOjA7aToxNDg1OTAzNjAwMDAwO2k6MTtzOjk6InByb3Bvc2FsMSI7fQ==",
          "node": Object {
            "category": Object {
              "id": "pCategory2",
              "name": "Politique",
            },
            "comments": Object {
              "totalCount": 19,
            },
            "createdAt": "2017-02-01 09:08:00",
            "district": Object {
              "id": "district1",
              "name": "Beauregard",
            },
            "id": "UHJvcG9zYWw6cHJvcG9zYWwx",
            "published": true,
            "publishedAt": "2017-02-01 00:00:00",
            "status": Object {
              "id": "status4",
              "name": "Soumis au vote",
            },
          },
        },
        Object {
          "cursor": "YToyOntpOjA7aToxNDg1OTAzNzgwMDAwO2k6MTtzOjk6InByb3Bvc2FsMiI7fQ==",
          "node": Object {
            "category": Object {
              "id": "pCategory1",
              "name": "Aménagement",
            },
            "comments": Object {
              "totalCount": 0,
            },
            "createdAt": "2017-02-01 00:03:00",
            "district": Object {
              "id": "district2",
              "name": "Nord Saint-Martin",
            },
            "id": "UHJvcG9zYWw6cHJvcG9zYWwy",
            "published": true,
            "publishedAt": "2017-02-01 00:03:00",
            "status": Object {
              "id": "status5",
              "name": "Vote gagné",
            },
          },
        },
        Object {
          "cursor": "YToyOntpOjA7aToxNDg1OTAzODQwMDAwO2k6MTtzOjk6InByb3Bvc2FsMyI7fQ==",
          "node": Object {
            "category": Object {
              "id": "pCategory2",
              "name": "Politique",
            },
            "comments": Object {
              "totalCount": 0,
            },
            "createdAt": "2017-02-01 00:04:00",
            "district": Object {
              "id": "district4",
              "name": "Beaulieu",
            },
            "id": "UHJvcG9zYWw6cHJvcG9zYWwz",
            "published": true,
            "publishedAt": "2017-02-01 00:04:00",
            "status": null,
          },
        },
      ],
      "pageInfo": Object {
        "endCursor": "YToyOntpOjA7aToxNDg1OTAzODQwMDAwO2k6MTtzOjk6InByb3Bvc2FsMyI7fQ==",
        "hasNextPage": false,
      },
      "totalCount": 3,
    },
  },
}
`;

exports[`Internal|ProposalStep.proposals connection fetches published proposals associated to a question collect step with a cursor 1`] = `
Object {
  "node": Object {
    "proposals": Object {
      "edges": Array [
        Object {
          "cursor": "YToyOntpOjA7aToxNDg1OTAzNjAyMDAwO2k6MTtzOjk6InF1ZXN0aW9uMiI7fQ==",
          "node": Object {
            "category": null,
            "comments": Object {
              "totalCount": 0,
            },
            "createdAt": "2017-02-01 00:00:02",
            "district": null,
            "id": "UHJvcG9zYWw6cXVlc3Rpb24y",
            "published": true,
            "publishedAt": "2017-02-01 00:00:02",
            "status": Object {
              "id": "status2",
              "name": "Approuvé",
            },
          },
        },
        Object {
          "cursor": "YToyOntpOjA7aToxNDg1OTAzNjAxMDAwO2k6MTtzOjk6InF1ZXN0aW9uMSI7fQ==",
          "node": Object {
            "category": null,
            "comments": Object {
              "totalCount": 10,
            },
            "createdAt": "2017-02-01 00:00:01",
            "district": null,
            "id": "UHJvcG9zYWw6cXVlc3Rpb24x",
            "published": true,
            "publishedAt": "2017-02-01 00:00:01",
            "status": Object {
              "id": "status2",
              "name": "Approuvé",
            },
          },
        },
      ],
      "pageInfo": Object {
        "endCursor": "YToyOntpOjA7aToxNDg1OTAzNjAxMDAwO2k6MTtzOjk6InF1ZXN0aW9uMSI7fQ==",
        "hasNextPage": false,
      },
      "totalCount": 2,
    },
  },
}
`;
